# rust-cmake-boringssl

./: .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs
foo/: CMakeLists.txt
foo/src/: main.c
src/: main.rs
